--- a/docs/docs-ref-autogen/excel/excel/excel.rowhiddenchangetype.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.rowhiddenchangetype.yml
@@ -1,8 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.RowHiddenChangeType:enum'
-    summary: '<span data-ttu-id="f0825-101">\[[API 集： EXCELAPI BETA （仅限预览）](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="f0825-101">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>'
-    isPreview: true
+    summary: '\[[API 集： ExcelApi 1.11](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]'
     name: Excel.RowHiddenChangeType
     fullName: Excel.RowHiddenChangeType
     langs:
@@ -13,8 +12,7 @@ items:
       - 'excel!Excel.RowHiddenChangeType.hidden:member'
       - 'excel!Excel.RowHiddenChangeType.unhidden:member'
   - uid: 'excel!Excel.RowHiddenChangeType.hidden:member'
-    summary: <span data-ttu-id="f0825-102">"隐藏" 指示隐藏行。</span><span class="sxs-lookup"><span data-stu-id="f0825-102">Hidden indicates the row is hidden.</span></span>
-    isPreview: true
+    summary: '"隐藏" 指示隐藏行。'
     name: hidden
     fullName: hidden
     langs:
@@ -22,8 +20,7 @@ items:
     type: field
     numericValue: '"Hidden"'
   - uid: 'excel!Excel.RowHiddenChangeType.unhidden:member'
-    summary: <span data-ttu-id="f0825-103">"取消隐藏" 指示不隐藏行。</span><span class="sxs-lookup"><span data-stu-id="f0825-103">Unhidden indicates the row is not hidden.</span></span>
-    isPreview: true
+    summary: '"取消隐藏" 指示不隐藏行。'
     name: unhidden
     fullName: unhidden
     langs:
