--- a/docs/docs-ref-autogen/excel_1_4/excel/excel.interfaces.workbookdata.yml
+++ b/docs/docs-ref-autogen/excel_1_4/excel/excel.interfaces.workbookdata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.WorkbookData:interface'
-    summary: <span data-ttu-id="f68b8-101">描述通过调用返回的数据的接口`workbook.toJSON()`</span><span class="sxs-lookup"><span data-stu-id="f68b8-101">An interface describing the data returned by calling `workbook.toJSON()`</span></span><!-- --><span data-ttu-id="f68b8-102">.</span><span class="sxs-lookup"><span data-stu-id="f68b8-102"></span></span>
+    summary: 描述通过调用返回的数据的接口`workbook.toJSON()`<!-- -->.
     name: Excel.Interfaces.WorkbookData
     fullName: Excel.Interfaces.WorkbookData
     langs:
@@ -17,9 +17,9 @@ items:
       - 'excel!Excel.Interfaces.WorkbookData#worksheets:member'
   - uid: 'excel!Excel.Interfaces.WorkbookData#bindings:member'
     summary: |-
-      <span data-ttu-id="f68b8-103">表示属于工作簿的绑定的集合。</span><span class="sxs-lookup"><span data-stu-id="f68b8-103">Represents a collection of bindings that are part of the workbook.</span></span> <span data-ttu-id="f68b8-104">只读。</span><span class="sxs-lookup"><span data-stu-id="f68b8-104">Read-only.</span></span>
+      表示属于工作簿的绑定的集合。
 
-      <span data-ttu-id="f68b8-105">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="f68b8-105">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: bindings
     fullName: bindings
     langs:
@@ -32,9 +32,9 @@ items:
           - 'excel!Excel.Interfaces.WorkbookData#bindings~0:complex'
   - uid: 'excel!Excel.Interfaces.WorkbookData#names:member'
     summary: |-
-      <span data-ttu-id="f68b8-106">表示工作簿范围内的已命名项目（称为区域和常量）的集合。</span><span class="sxs-lookup"><span data-stu-id="f68b8-106">Represents a collection of workbook scoped named items (named ranges and constants).</span></span> <span data-ttu-id="f68b8-107">只读。</span><span class="sxs-lookup"><span data-stu-id="f68b8-107">Read-only.</span></span>
+      表示工作簿范围内的已命名项目（称为区域和常量）的集合。
 
-      <span data-ttu-id="f68b8-108">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="f68b8-108">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: names
     fullName: names
     langs:
@@ -47,9 +47,9 @@ items:
           - 'excel!Excel.Interfaces.WorkbookData#names~0:complex'
   - uid: 'excel!Excel.Interfaces.WorkbookData#pivotTables:member'
     summary: |-
-      <span data-ttu-id="f68b8-109">表示一组与 workbook 相关联的 PivotTable 对象。</span><span class="sxs-lookup"><span data-stu-id="f68b8-109">Represents a collection of PivotTables associated with the workbook.</span></span> <span data-ttu-id="f68b8-110">只读。</span><span class="sxs-lookup"><span data-stu-id="f68b8-110">Read-only.</span></span>
+      表示一组与 workbook 相关联的 PivotTable 对象。
 
-      <span data-ttu-id="f68b8-111">\[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="f68b8-111">\[ [API set: ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: pivotTables
     fullName: pivotTables
     langs:
@@ -62,9 +62,9 @@ items:
           - 'excel!Excel.Interfaces.WorkbookData#pivotTables~0:complex'
   - uid: 'excel!Excel.Interfaces.WorkbookData#settings:member'
     summary: |-
-      <span data-ttu-id="f68b8-112">表示一组与 workbook 相关联的 setting 对象。</span><span class="sxs-lookup"><span data-stu-id="f68b8-112">Represents a collection of Settings associated with the workbook.</span></span> <span data-ttu-id="f68b8-113">只读。</span><span class="sxs-lookup"><span data-stu-id="f68b8-113">Read-only.</span></span>
+      表示一组与 workbook 相关联的 setting 对象。
 
-      <span data-ttu-id="f68b8-114">\[[API 集： ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="f68b8-114">\[ [API set: ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: settings
     fullName: settings
     langs:
@@ -77,9 +77,9 @@ items:
           - 'excel!Excel.Interfaces.WorkbookData#settings~0:complex'
   - uid: 'excel!Excel.Interfaces.WorkbookData#tables:member'
     summary: |-
-      <span data-ttu-id="f68b8-115">表示与工作簿关联的表的集合。</span><span class="sxs-lookup"><span data-stu-id="f68b8-115">Represents a collection of tables associated with the workbook.</span></span> <span data-ttu-id="f68b8-116">只读。</span><span class="sxs-lookup"><span data-stu-id="f68b8-116">Read-only.</span></span>
+      表示与工作簿关联的表的集合。
 
-      <span data-ttu-id="f68b8-117">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="f68b8-117">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: tables
     fullName: tables
     langs:
@@ -92,9 +92,9 @@ items:
           - 'excel!Excel.Interfaces.WorkbookData#tables~0:complex'
   - uid: 'excel!Excel.Interfaces.WorkbookData#worksheets:member'
     summary: |-
-      <span data-ttu-id="f68b8-118">表示与工作簿关联的工作表的集合。</span><span class="sxs-lookup"><span data-stu-id="f68b8-118">Represents a collection of worksheets associated with the workbook.</span></span> <span data-ttu-id="f68b8-119">只读。</span><span class="sxs-lookup"><span data-stu-id="f68b8-119">Read-only.</span></span>
+      表示与工作簿关联的工作表的集合。
 
-      <span data-ttu-id="f68b8-120">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="f68b8-120">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: worksheets
     fullName: worksheets
     langs:
