--- a/docs/docs-ref-autogen/excel_1_6/excel/excel.interfaces.chartaxistitleupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_6/excel/excel.interfaces.chartaxistitleupdatedata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.ChartAxisTitleUpdateData:interface'
-    summary: '<span data-ttu-id="08c0e-101">一个用于更新 ChartAxisTitle 对象上的数据的接口，可用于`chartAxisTitle.set({ ... })`</span><span class="sxs-lookup"><span data-stu-id="08c0e-101">An interface for updating data on the ChartAxisTitle object, for use in `chartAxisTitle.set({ ... })`</span></span><!-- --><span data-ttu-id="08c0e-102">.</span><span class="sxs-lookup"><span data-stu-id="08c0e-102"></span></span>'
+    summary: '一个用于更新 ChartAxisTitle 对象上的数据的接口，可用于`chartAxisTitle.set({ ... })`<!-- -->.'
     name: Excel.Interfaces.ChartAxisTitleUpdateData
     fullName: Excel.Interfaces.ChartAxisTitleUpdateData
     langs:
@@ -14,9 +14,9 @@ items:
       - 'excel!Excel.Interfaces.ChartAxisTitleUpdateData#visible:member'
   - uid: 'excel!Excel.Interfaces.ChartAxisTitleUpdateData#format:member'
     summary: |-
-      <span data-ttu-id="08c0e-103">表示图表坐标轴标题的格式。</span><span class="sxs-lookup"><span data-stu-id="08c0e-103">Represents the formatting of chart axis title.</span></span>
+      指定图表坐标轴标题的格式。
 
-      <span data-ttu-id="08c0e-104">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="08c0e-104">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: format
     fullName: format
     langs:
@@ -29,9 +29,9 @@ items:
           - 'excel!Excel.Interfaces.ChartAxisTitleFormatUpdateData:interface'
   - uid: 'excel!Excel.Interfaces.ChartAxisTitleUpdateData#text:member'
     summary: |-
-      <span data-ttu-id="08c0e-105">表示坐标轴标题。</span><span class="sxs-lookup"><span data-stu-id="08c0e-105">Represents the axis title.</span></span>
+      指定轴标题。
 
-      <span data-ttu-id="08c0e-106">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="08c0e-106">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: text
     fullName: text
     langs:
@@ -44,9 +44,9 @@ items:
           - string
   - uid: 'excel!Excel.Interfaces.ChartAxisTitleUpdateData#visible:member'
     summary: |-
-      <span data-ttu-id="08c0e-107">指定坐标轴标题是否可见的布尔值。</span><span class="sxs-lookup"><span data-stu-id="08c0e-107">A boolean that specifies the visibility of an axis title.</span></span>
+      指定轴标题是否为 shape.visibile。
 
-      <span data-ttu-id="08c0e-108">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="08c0e-108">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: visible
     fullName: visible
     langs:
