--- a/docs/docs-ref-autogen/excel_1_7/excel/excel.interfaces.chartdatalabelloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_1_7/excel/excel.interfaces.chartdatalabelloadoptions.yml
@@ -2,9 +2,9 @@
 items:
   - uid: 'excel!Excel.Interfaces.ChartDataLabelLoadOptions:interface'
     summary: |-
-      <span data-ttu-id="d7e16-101">表示图表点的数据标签。</span><span class="sxs-lookup"><span data-stu-id="d7e16-101">Represents the data label of a chart point.</span></span>
+      表示图表点的数据标签。
 
-      <span data-ttu-id="d7e16-102">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d7e16-102">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.Interfaces.ChartDataLabelLoadOptions
     fullName: Excel.Interfaces.ChartDataLabelLoadOptions
     langs:
@@ -22,7 +22,7 @@ items:
       - 'excel!Excel.Interfaces.ChartDataLabelLoadOptions#showSeriesName:member'
       - 'excel!Excel.Interfaces.ChartDataLabelLoadOptions#showValue:member'
   - uid: 'excel!Excel.Interfaces.ChartDataLabelLoadOptions#$all:member'
-    summary: '<span data-ttu-id="d7e16-103">为`$all` LoadOptions 指定加载所有标量属性（例如：`Range.address`</span><span class="sxs-lookup"><span data-stu-id="d7e16-103">Specifying `$all` for the LoadOptions loads all the scalar properties (e.g.: `Range.address`</span></span><!-- --><span data-ttu-id="d7e16-104">），但不是导航属性（例如：`Range.format.fill.color`</span><span class="sxs-lookup"><span data-stu-id="d7e16-104">) but not the navigational properties (e.g.: `Range.format.fill.color`</span></span><!-- --><span data-ttu-id="d7e16-105">).</span><span class="sxs-lookup"><span data-stu-id="d7e16-105"></span></span>'
+    summary: 为`$all` LoadOptions 指定加载所有标量属性（例如：`Range.address`<!-- -->），但不是导航属性（例如：`Range.format.fill.color`<!-- -->).
     name: $all
     fullName: $all
     langs:
@@ -35,9 +35,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartDataLabelLoadOptions#position:member'
     summary: |-
-      <span data-ttu-id="d7e16-106">表示数据标签的位置的 DataLabelPosition 值。</span><span class="sxs-lookup"><span data-stu-id="d7e16-106">DataLabelPosition value that represents the position of the data label.</span></span> <span data-ttu-id="d7e16-107">有关详细信息，请参阅 ChartDataLabelPosition。</span><span class="sxs-lookup"><span data-stu-id="d7e16-107">See Excel.ChartDataLabelPosition for details.</span></span>
+      表示数据标签的位置的 DataLabelPosition 值。 有关详细信息，请参阅 ChartDataLabelPosition。
 
-      <span data-ttu-id="d7e16-108">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d7e16-108">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: position
     fullName: position
     langs:
@@ -50,9 +50,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartDataLabelLoadOptions#separator:member'
     summary: |-
-      <span data-ttu-id="d7e16-109">该字符串表示用于图表中数据标签的分隔符。</span><span class="sxs-lookup"><span data-stu-id="d7e16-109">String representing the separator used for the data label on a chart.</span></span>
+      该字符串表示用于图表中数据标签的分隔符。
 
-      <span data-ttu-id="d7e16-110">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d7e16-110">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: separator
     fullName: separator
     langs:
@@ -65,9 +65,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartDataLabelLoadOptions#showBubbleSize:member'
     summary: |-
-      <span data-ttu-id="d7e16-111">该布尔值表示数据标签气泡大小是否可见。</span><span class="sxs-lookup"><span data-stu-id="d7e16-111">Boolean value representing if the data label bubble size is visible or not.</span></span>
+      指定数据标签气泡大小是否可见。
 
-      <span data-ttu-id="d7e16-112">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d7e16-112">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: showBubbleSize
     fullName: showBubbleSize
     langs:
@@ -80,9 +80,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartDataLabelLoadOptions#showCategoryName:member'
     summary: |-
-      <span data-ttu-id="d7e16-113">表示数据标签分类名称是否可见的布尔值。</span><span class="sxs-lookup"><span data-stu-id="d7e16-113">Boolean value representing if the data label category name is visible or not.</span></span>
+      指定数据标签类别名称是否可见。
 
-      <span data-ttu-id="d7e16-114">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d7e16-114">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: showCategoryName
     fullName: showCategoryName
     langs:
@@ -95,9 +95,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartDataLabelLoadOptions#showLegendKey:member'
     summary: |-
-      <span data-ttu-id="d7e16-115">该布尔值表示数据标签图例标示是否可见。</span><span class="sxs-lookup"><span data-stu-id="d7e16-115">Boolean value representing if the data label legend key is visible or not.</span></span>
+      指定数据标签图例标示是否可见。
 
-      <span data-ttu-id="d7e16-116">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d7e16-116">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: showLegendKey
     fullName: showLegendKey
     langs:
@@ -110,9 +110,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartDataLabelLoadOptions#showPercentage:member'
     summary: |-
-      <span data-ttu-id="d7e16-117">该布尔值表示数据标签百分比是否可见。</span><span class="sxs-lookup"><span data-stu-id="d7e16-117">Boolean value representing if the data label percentage is visible or not.</span></span>
+      指定数据标签百分比是否可见。
 
-      <span data-ttu-id="d7e16-118">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d7e16-118">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: showPercentage
     fullName: showPercentage
     langs:
@@ -125,9 +125,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartDataLabelLoadOptions#showSeriesName:member'
     summary: |-
-      <span data-ttu-id="d7e16-119">该布尔值表示数据标签系列名称是否可见。</span><span class="sxs-lookup"><span data-stu-id="d7e16-119">Boolean value representing if the data label series name is visible or not.</span></span>
+      指定数据标签系列名称是否可见。
 
-      <span data-ttu-id="d7e16-120">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d7e16-120">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: showSeriesName
     fullName: showSeriesName
     langs:
@@ -140,9 +140,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartDataLabelLoadOptions#showValue:member'
     summary: |-
-      <span data-ttu-id="d7e16-121">该布尔值表示数据标签值是否可见。</span><span class="sxs-lookup"><span data-stu-id="d7e16-121">Boolean value representing if the data label value is visible or not.</span></span>
+      指定数据标签值是否可见。
 
-      <span data-ttu-id="d7e16-122">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d7e16-122">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: showValue
     fullName: showValue
     langs:
