--- a/docs/docs-ref-autogen/visio/visio/visio.shapedataitem.yml
+++ b/docs/docs-ref-autogen/visio/visio/visio.shapedataitem.yml
@@ -2,16 +2,16 @@
 items:
   - uid: 'visio!Visio.ShapeDataItem:class'
     summary: |-
-      <span data-ttu-id="86148-101">表示 ShapeDataItem 对象。</span><span class="sxs-lookup"><span data-stu-id="86148-101">Represents the ShapeDataItem.</span></span>
+      表示 ShapeDataItem 对象。
 
-      <span data-ttu-id="86148-102">\[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]</span><span class="sxs-lookup"><span data-stu-id="86148-102">\[ [API set: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview) \]</span></span>
+      \[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
     name: Visio.ShapeDataItem
     fullName: Visio.ShapeDataItem
     langs:
       - typeScript
     type: class
     extends:
-      - 'visio!OfficeExtension.ClientObject:class'
+      - 'office!OfficeExtension.ClientObject:class'
     package: visio!
     children:
       - 'visio!Visio.ShapeDataItem#context:member'
@@ -24,7 +24,7 @@ items:
       - 'visio!Visio.ShapeDataItem#toJSON:member(1)'
       - 'visio!Visio.ShapeDataItem#value:member'
   - uid: 'visio!Visio.ShapeDataItem#context:member'
-    summary: <span data-ttu-id="86148-103">与该对象关联的请求上下文。</span><span class="sxs-lookup"><span data-stu-id="86148-103">The request context associated with the object.</span></span> <span data-ttu-id="86148-104">这会将加载项的进程连接到 Office 主机应用程序的进程。</span><span class="sxs-lookup"><span data-stu-id="86148-104">This connects the add-in's process to the Office host application's process.</span></span>
+    summary: 与该对象关联的请求上下文。 这会将加载项的进程连接到 Office 主机应用程序的进程。
     name: context
     fullName: context
     langs:
@@ -37,9 +37,9 @@ items:
           - 'visio!Visio.RequestContext:class'
   - uid: 'visio!Visio.ShapeDataItem#format:member'
     summary: |-
-      <span data-ttu-id="86148-105">指定形状数据项格式的字符串。</span><span class="sxs-lookup"><span data-stu-id="86148-105">A string that specifies the format of the shape data item.</span></span> <span data-ttu-id="86148-106">只读。</span><span class="sxs-lookup"><span data-stu-id="86148-106">Read-only.</span></span>
+      指定形状数据项格式的字符串。 只读。
 
-      <span data-ttu-id="86148-107">\[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]</span><span class="sxs-lookup"><span data-stu-id="86148-107">\[ [API set: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview) \]</span></span>
+      \[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
     name: format
     fullName: format
     langs:
@@ -52,9 +52,9 @@ items:
           - string
   - uid: 'visio!Visio.ShapeDataItem#formattedValue:member'
     summary: |-
-      <span data-ttu-id="86148-108">指定形状数据项格式值的字符串。</span><span class="sxs-lookup"><span data-stu-id="86148-108">A string that specifies the formatted value of the shape data item.</span></span> <span data-ttu-id="86148-109">只读。</span><span class="sxs-lookup"><span data-stu-id="86148-109">Read-only.</span></span>
+      指定形状数据项格式值的字符串。 只读。
 
-      <span data-ttu-id="86148-110">\[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]</span><span class="sxs-lookup"><span data-stu-id="86148-110">\[ [API set: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview) \]</span></span>
+      \[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
     name: formattedValue
     fullName: formattedValue
     langs:
@@ -67,9 +67,9 @@ items:
           - string
   - uid: 'visio!Visio.ShapeDataItem#label:member'
     summary: |-
-      <span data-ttu-id="86148-111">指定形状数据项标签的字符串。</span><span class="sxs-lookup"><span data-stu-id="86148-111">A string that specifies the label of the shape data item.</span></span> <span data-ttu-id="86148-112">只读。</span><span class="sxs-lookup"><span data-stu-id="86148-112">Read-only.</span></span>
+      指定形状数据项标签的字符串。 只读。
 
-      <span data-ttu-id="86148-113">\[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]</span><span class="sxs-lookup"><span data-stu-id="86148-113">\[ [API set: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview) \]</span></span>
+      \[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
     name: label
     fullName: label
     langs:
@@ -81,17 +81,17 @@ items:
         type:
           - string
   - uid: 'visio!Visio.ShapeDataItem#load:member(1)'
-    summary: <span data-ttu-id="86148-114">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="86148-114">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="86148-115">在读取属性之前，你必须调用“context.sync()”。</span><span class="sxs-lookup"><span data-stu-id="86148-115">You must call "context.sync()" before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性之前，你必须调用“context.sync()”。
     remarks: |-
-      <span data-ttu-id="86148-116">除了此签名之外，此方法还具有以下签名：</span><span class="sxs-lookup"><span data-stu-id="86148-116">In addition to this signature, this method has the following signatures:</span></span>
+      除了此签名之外，此方法还具有以下签名：
 
-      <span data-ttu-id="86148-117">`load(option?: string | string[]): Visio.ShapeDataItem`-Where 选项是一个逗号分隔的字符串或一个字符串数组，用于指定要加载的属性。</span><span class="sxs-lookup"><span data-stu-id="86148-117">`load(option?: string | string[]): Visio.ShapeDataItem` - Where option is a comma-delimited string or an array of strings that specify the properties to load.</span></span>
+      `load(option?: string | string[]): Visio.ShapeDataItem`-Where 选项是一个逗号分隔的字符串或一个字符串数组，用于指定要加载的属性。
 
-      <span data-ttu-id="86148-118">`load(option?: { select?: string; expand?: string; }): Visio.ShapeDataItem`-Where 选项。选择是一个用逗号分隔的字符串，用于指定要加载的属性和选项。 expand 是一个用逗号分隔的字符串，用于指定要加载的导航属性。</span><span class="sxs-lookup"><span data-stu-id="86148-118">`load(option?: { select?: string; expand?: string; }): Visio.ShapeDataItem` - Where option.select is a comma-delimited string that specifies the properties to load, and options.expand is a comma-delimited string that specifies the navigation properties to load.</span></span>
+      `load(option?: { select?: string; expand?: string; }): Visio.ShapeDataItem`-Where 选项。选择是一个用逗号分隔的字符串，用于指定要加载的属性和选项。 expand 是一个用逗号分隔的字符串，用于指定要加载的导航属性。
 
-      <span data-ttu-id="86148-119">`load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Visio.ShapeDataItem`-仅适用于集合类型。</span><span class="sxs-lookup"><span data-stu-id="86148-119">`load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Visio.ShapeDataItem` - Only available on collection types.</span></span> <span data-ttu-id="86148-120">它类似于前面的签名。</span><span class="sxs-lookup"><span data-stu-id="86148-120">It is similar to the preceding signature.</span></span> <span data-ttu-id="86148-121">Top 指定结果中可包含的集合项的最大数量。</span><span class="sxs-lookup"><span data-stu-id="86148-121">Option.top specifies the maximum number of collection items that can be included in the result.</span></span> <span data-ttu-id="86148-122">选项。 skip 指定要跳过且不包含在结果中的项目数。</span><span class="sxs-lookup"><span data-stu-id="86148-122">Option.skip specifies the number of items that are to be skipped and not included in the result.</span></span> <span data-ttu-id="86148-123">如果指定了 top 选项，则在跳过指定数目的项目后将启动结果集。</span><span class="sxs-lookup"><span data-stu-id="86148-123">If option.top is specified, the result set will start after skipping the specified number of items.</span></span>
+      `load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Visio.ShapeDataItem`-仅适用于集合类型。 它类似于前面的签名。 Top 指定结果中可包含的集合项的最大数量。 选项。 skip 指定要跳过且不包含在结果中的项目数。 如果指定了 top 选项，则在跳过指定数目的项目后将启动结果集。
 
-      #### <a name="examples"></a><span data-ttu-id="86148-124">示例</span><span class="sxs-lookup"><span data-stu-id="86148-124">Examples</span></span>
+      #### <a name="examples"></a>示例
 
       ```javascript
       Visio.run(session, function (ctx) {
@@ -127,7 +127,7 @@ items:
           type:
             - 'visio!Visio.Interfaces.ShapeDataItemLoadOptions:interface'
   - uid: 'visio!Visio.ShapeDataItem#load:member(2)'
-    summary: <span data-ttu-id="86148-125">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="86148-125">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="86148-126">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="86148-126">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(propertyNames)
     fullName: load(propertyNames)
     langs:
@@ -141,11 +141,11 @@ items:
         description: ''
       parameters:
         - id: propertyNames
-          description: <span data-ttu-id="86148-127">一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。</span><span class="sxs-lookup"><span data-stu-id="86148-127">A comma-delimited string or an array of strings that specify the properties to load.</span></span>
+          description: 一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。
           type:
             - 'string | string[]'
   - uid: 'visio!Visio.ShapeDataItem#load:member(3)'
-    summary: <span data-ttu-id="86148-128">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="86148-128">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="86148-129">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="86148-129">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(propertyNamesAndPaths)
     fullName: load(propertyNamesAndPaths)
     langs:
@@ -159,11 +159,11 @@ items:
         description: ''
       parameters:
         - id: propertyNamesAndPaths
-          description: '<span data-ttu-id="86148-130">其中，propertyNamesAndPaths 是用逗号分隔的字符串，用于指定要加载的属性和 propertyNamesAndPaths。扩展是一个用逗号分隔的字符串，用于指定要加载的导航属性。</span><span class="sxs-lookup"><span data-stu-id="86148-130">Where propertyNamesAndPaths.select is a comma-delimited string that specifies the properties to load, and propertyNamesAndPaths.expand is a comma-delimited string that specifies the navigation properties to load.</span></span>'
+          description: 其中，propertyNamesAndPaths 是用逗号分隔的字符串，用于指定要加载的属性和 propertyNamesAndPaths。扩展是一个用逗号分隔的字符串，用于指定要加载的导航属性。
           type:
             - '{ select?: string; expand?: string; }'
   - uid: 'visio!Visio.ShapeDataItem#toJSON:member(1)'
-    summary: '<span data-ttu-id="86148-131">重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`</span><span class="sxs-lookup"><span data-stu-id="86148-131">Overrides the JavaScript `toJSON()` method in order to provide more useful output when an API object is passed to `JSON.stringify()`</span></span><!-- --><span data-ttu-id="86148-132">.</span><span class="sxs-lookup"><span data-stu-id="86148-132"></span></span> <span data-ttu-id="86148-133">(`JSON.stringify`</span><span class="sxs-lookup"><span data-stu-id="86148-133"></span></span><!-- --><span data-ttu-id="86148-134">反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始 ShapeDataItem 对象是 API 对象，但`toJSON`方法返回一个无格式的 JavaScript 对象（类型为`Visio.Interfaces.ShapeDataItemData`</span><span class="sxs-lookup"><span data-stu-id="86148-134">, in turn, calls the `toJSON` method of the object that is passed to it.) Whereas the original Visio.ShapeDataItem object is an API object, the `toJSON` method returns a plain JavaScript object (typed as `Visio.Interfaces.ShapeDataItemData`</span></span><!-- --><span data-ttu-id="86148-135">），其中包含原始对象中所有已加载的子属性的浅表副本。</span><span class="sxs-lookup"><span data-stu-id="86148-135">) that contains shallow copies of any loaded child properties from the original object.</span></span>'
+    summary: 重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始 ShapeDataItem 对象是 API 对象，但`toJSON`方法返回一个无格式的 JavaScript 对象（类型为`Visio.Interfaces.ShapeDataItemData`<!-- -->），其中包含原始对象中所有已加载的子属性的浅表副本。
     name: toJSON()
     fullName: toJSON()
     langs:
@@ -177,9 +177,9 @@ items:
         description: ''
   - uid: 'visio!Visio.ShapeDataItem#value:member'
     summary: |-
-      <span data-ttu-id="86148-136">指定形状数据项值的字符串。</span><span class="sxs-lookup"><span data-stu-id="86148-136">A string that specifies the value of the shape data item.</span></span> <span data-ttu-id="86148-137">只读。</span><span class="sxs-lookup"><span data-stu-id="86148-137">Read-only.</span></span>
+      指定形状数据项值的字符串。 只读。
 
-      <span data-ttu-id="86148-138">\[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]</span><span class="sxs-lookup"><span data-stu-id="86148-138">\[ [API set: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview) \]</span></span>
+      \[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
     name: value
     fullName: value
     langs:
@@ -191,7 +191,7 @@ items:
         type:
           - string
 references:
-  - uid: 'visio!OfficeExtension.ClientObject:class'
+  - uid: 'office!OfficeExtension.ClientObject:class'
     name: OfficeExtension.ClientObject
   - uid: 'visio!Visio.RequestContext:class'
     name: RequestContext
